# sso_portal_client

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/matchers/: bandit.json  mypy.json
.github/workflows/: ci.yml
docs/: implementation-plan.md
example_project/: manage.py
example_project/config/: settings.py  urls.py  wsgi.py
example_project/store/: apps.py  models.py  tests.py  urls.py  views.py
example_project/store/migrations/: 0001_initial.py  0002_admin_group.py
example_project/store/templates/store/: 403.html  admin_area.html  base.html  index.html
sso_portal_client/: __init__.py  adapters.py  apps.py  claims.py  conf.py  context_processors.py  middleware.py  models.py  receivers.py  signals.py  sync.py  urls.py  views.py
sso_portal_client/migrations/: 0001_initial.py
sso_portal_client/templates/sso_portal_client/: switch_widget.html
sso_portal_client/templatetags/: sso_portal_client.py
tests/: conftest.py  settings.py  test_adapters.py  test_conf.py  test_context_processors.py  test_middleware.py  test_receivers.py  test_sync.py  test_templatetags.py  test_views.py  urls.py  views.py
tests/templates/tests/: widget.html  widget_with_kwargs.html
